# bgfx-sdf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
benchmark/: CMakeLists.txt  GlyphErrorAnalysis.ipynb  GlyphErrorBenchmark.cpp  GlyphErrorBenchmark.h  GlyphGenerationBenchmark.cpp  GlyphGenerationBenchmark.h  GlyphPrecisionBenchmark.cpp  GlyphPrecisionBenchmark.h  GlyphRenderingBenchmark.cpp  GlyphRenderingBenchmark.h  Timer.cpp  Timer.h  main.cpp
libs/poly34/: poly34.cpp  poly34.h
src/: main.cpp  utilities.cpp  utilities.h
src/FontAtlas/: AtlasRegion.h  CubeAtlas.cpp  CubeAtlas.h  FontInfo.h  NumberTypes.h  RectanglePacker.cpp  RectanglePacker.h  TextBuffer.cpp  TextBuffer.h  TrueTypeFont.cpp  TrueTypeFont.h
src/FontAtlas/shaders/: fs_font_sdf.frag  vs_font_basic.bin.h
src/bgfx_example/: cube_atlas.cpp
src/font_decomposition/: Contour.cpp  Contour.h  EdgeHolder.cpp  EdgeHolder.h  EdgeSegment.cpp  EdgeSegment.h  FontParser.cpp  FontParser.h  Shape.cpp  Shape.h  Vector2.cpp  Vector2.h
src/font_processing/: AtlasRegion.cpp  AtlasRegion.h  CubeAtlas.cpp  CubeAtlas.h  FontHandles.h  FontInfo.h  GlyphInfo.h  RectanglePacker.cpp  RectanglePacker.h  TextBuffer.cpp  TextBuffer.h  TrueTypeFont.cpp  TrueTypeFont.h  utf8.cpp  utf8.h
src/helper/: DebugShapeGenerator.cpp  DebugShapeGenerator.h  EquationSolver.cpp  EquationSolver.h  Timer.h
src/managers/: FontManager.cpp  FontManager.h  InputManager.cpp  InputManager.h  TextBufferManager.cpp  TextBufferManager.h
src/sdf/: MsdfGenerator.cpp  MsdfGenerator.h  MsdfOriginalGenerator.cpp  MsdfOriginalGenerator.h  msdfGenerator.cpp  msdfGenerator.h  sdf.h
src/shaders/: fs_font_basic.bin.h  makefile
src/shaders/common/: common.sh  shader-embeded.mk  tools.mk
src/shaders/fragment/: fs_color.bin.h  fs_font_basic.bin.h  fs_font_basic.sc  fs_font_basic_bench.bin.h  fs_font_basic_bench.sc  fs_font_contours.bin.h  fs_font_contours.sc  fs_font_msdf.bin.h  fs_font_msdf.sc  fs_font_msdf_bench.bin.h  fs_font_msdf_bench.sc  fs_font_sdf.bin.h  fs_font_sdf.sc  fs_font_sdf_bench.bin.h  fs_font_sdf_bench.sc
src/shaders/vertex/: vs_font_basic.bin.h  vs_font_basic.sc  vs_font_basic_bench.bin.h  vs_font_basic_bench.sc
src/window/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  WindowHandle.cpp  WindowHandle.h
tests/: CMakeLists.txt  EdgeColorTest.cpp  EdgeSegmentTest.cpp  EquationSolverTests.cpp  ShapeTest.cpp  Vector2Test.cpp
utilities/: BezierCurveDrawer.py
